<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter Phone</string>
    <string name="alamat_email">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick Up</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
